# Orbital-Mono-Repo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml
SQL/: CLEANED_ASTRONAUTS.sql  CLEANED_NASA_APOD.sql  CLEANED_NASA_DONKI.sql  CLEANED_NASA_EXOPLANETS.sql  QUALITY_ASTRONAUTS.sql  QUALITY_NASA_APOD.sql  QUALITY_NASA_DONKI.sql  QUALITY_NASA_EXOPLANETS.sql  STAGED_ASTRONAUTS.sql  STAGED_NASA_APOD.sql  STAGED_NASA_DONKI.sql  STAGED_NASA_EXOPLANETS.sql  cleaned.sql  datagrip_con_and_validation.sql  staged.sql
SQL/cleaned_aggregation/: CLEANED_ASTRONAUTS.sql  CLEANED_NASA_APOD.sql  CLEANED_NASA_DONKI.sql  CLEANED_NASA_EXOPLANETS.sql
SQL/data_quality/: QUALITY_NASA_APOD.sql  QUALITY_NASA_EXOPLANETS.sql
SQL/staging/: STAGED_ASTRONAUTS.sql  STAGED_NASA_APOD.sql  STAGED_NASA_DONKI.sql  STAGED_NASA_EXOPLANETS.sql
api/: app.py  utils.py
data-vis/: app.py
logs/: application.log.1
src/: __init__.py  data_ingestion.py  data_quality.py  data_staging.py  db_sync.py  demo.py  logger.py  main.py  runner.py  setup.py  utils.py
tests/: test_main.py  test_utils.py
