[project]
name = "orbital"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astroquery>=0.4.10",
    "dotenv>=0.9.9",
    "duckdb>=1.3.2",
    "fastapi[standard]>=0.116.1",
    "isodate>=0.7.2",
    "minio>=7.2.16",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "prefect>=3.4.14",
    "pymongo>=4.14.1",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
    "streamlit>=1.49.1",
]
